# M2C-Digital---Teste-Backend-Senior

./: M2C API.postman_collection.json  docker-compose.yml
backend/: .env.example  docker-compose.yml  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20250219225833_create_user_table/: migration.sql
backend/prisma/migrations/20250220120359_create_tables_init/: migration.sql
backend/src/: app.module.ts
backend/src/app/shared/: either.ts  (+1 more)
backend/src/errors/: general.ts
consumerGo/: .env  go.mod  go.sum  main.go
consumerGo/internal/interfaces/: message.go
consumerGo/internal/mongo/: mongo.go
consumerGo/internal/postgres/: psql.go
consumerGo/internal/rabbitmq/: message_consumer.factory.go  message_consumer.service.go  rabbit_mq.service.go
consumerGo/internal/redis/: redis.go
consumerNodejs/: .env.example  package-lock.json  package.json
consumerNodejs/src/: index.ts
consumerNodejs/src/model/: message.ts
consumerNodejs/src/mongodb/: index.ts
consumerNodejs/src/postgress/: psql.ts
consumerNodejs/src/rabbitMQ/: messageConsumer.service.ts  messageConsumerFactory.ts  rabbitmq.service.ts
consumerNodejs/src/redis/: redisConn.ts
consumerRust/: Cargo.toml
consumerRust/src/: main.rs
consumerRust/src/interfaces/: message.rs  mod.rs
consumerRust/src/mongo/: mod.rs  mongo.rs
consumerRust/src/postgres_con/: mod.rs  post_con.rs
consumerRust/src/rabbitmq/: message_consumer_factory.rs  message_consumer_service.rs  mod.rs  rabbit_mq_service.rs
consumerRust/src/redis_con/: mod.rs  redis_con.rs
(+92 files in other folders)
