[package]
name = "consumerRust"
version = "0.1.0"
edition = "2024"

[dependencies]
amiquip = "0.4.2"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.29.0", features = ["async-std-native-tls-comp"] }
once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
mongodb = "3.2.1"
cuid2 = "0.1.4"
tokio-postgres = "0.7"
url = "2.2"
lapin = "2.5.0"
futures-util = "0.3"